<resources>
    <string name="app_name">YandexMaps</string>

    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="results_by_query">Results by query:</string>

    <string name="my_location">My location</string>
    <string name="choose_on_map">Choose on the map</string>
    <string name="search_by_query">Search by query</string>

    <string name="origin">Origin</string>
    <string name="destination">Destination</string>

    <string name="choose_origin">Choose origin</string>
    <string name="choose_destination">Choose destination</string>

    <string name="total_distance">Total distance: %s</string>
    <string name="total_duration">Total duration: %s</string>

    <string name="section_distance">Distance: %s</string>
    <string name="section_duration">Duration: %s</string>

    <string name="distance">Distance</string>
    <string name="duration">Duration</string>

    <string name="info">Info</string>
    <string name="photos">Photos</string>

    <string name="km">km</string>
    <string name="m">m</string>

    <string name="hours">h</string>
    <string name="minutes">min</string>
    <string name="seconds">s</string>

    <string name="direction_not_found">Direction is not found</string>

    <string name="driving_description">drive %s</string>
    <string name="exit_driving_description">exit to the %s</string>
    <string name="fork_driving_description">choose a fork to the %s</string>

    <string name="left">left</string>
    <string name="right">right</string>
    <string name="forward">forward</string>

    <string-array name="direction_types">
        <item>driving</item>
        <item>mass transit</item>
    </string-array>
</resources>