<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/directionLayout"
    android:background="@color/white"
    android:paddingStart="6dp"
    android:paddingEnd="6dp"
    android:paddingBottom="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/arrowUpView"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_keyboard_arrow_up_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/origin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/light_blue"
        android:textColor="@color/light_blue"
        android:text="@string/choose_origin"
        app:layout_constraintTop_toBottomOf="@id/arrowUpView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/destination"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/red"
        android:textColor="@color/red"
        android:text="@string/choose_destination"
        app:layout_constraintTop_toBottomOf="@id/origin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/directionTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/destination"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/directionTypeSpinner" />

    <TextView
        android:id="@+id/distance"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/total_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/routesButton"
        app:layout_constraintTop_toBottomOf="@id/directionTypeSpinner"/>

    <TextView
        android:id="@+id/duration"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/total_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/routesButton"
        app:layout_constraintTop_toBottomOf="@id/distance"/>

    <TextView
        android:id="@+id/directionNotFound"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:text="@string/direction_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/duration"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/routesButton"
        android:visibility="gone"
        app:fabSize="mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/distance"
        app:layout_constraintBottom_toBottomOf="@id/duration"
        android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
        app:tint="@color/white"
        android:focusable="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/directionNotFound" />

</androidx.constraintlayout.widget.ConstraintLayout>